--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.listing-card img {
+  transition: all 0.2s ease-in-out;
+}
+
+.listing-card:hover img {
+  transform: scale(1.1);
+}
+
+.listing-card:hover {
+  box-shadow: 1px 2px 3px 0 rgba(91 77 255 / 8%);
+}
